tests/error/function_ret_ref_prim.gw
// [contains] primitive types cannot be used as reference
function int@ test(){}
